update scripts