@@ -24,32 +24,7 @@ getJavaSpecificOpts() {
   current_value=$2
   value=""
 
-  if [ "${version}" -ge 11 ] && [ "${version}" -lt 14 ]; then
-      value="\
-          --add-exports=java.base/jdk.internal.misc=ALL-UNNAMED \
-          --add-exports=java.base/sun.nio.ch=ALL-UNNAMED \
-          --add-exports=java.management/com.sun.jmx.mbeanserver=ALL-UNNAMED \
-          --add-exports=jdk.internal.jvmstat/sun.jvmstat.monitor=ALL-UNNAMED \
-          --add-exports=java.base/sun.reflect.generics.reflectiveObjects=ALL-UNNAMED \
-          --add-opens=jdk.management/com.sun.management.internal=ALL-UNNAMED \
-          --add-opens=java.base/java.nio=ALL-UNNAMED \
-          --illegal-access=permit \
-          ${current_value}"
-
-  elif [ "${version}" -ge 14 ] && [ "${version}" -lt 15 ]; then
-        value="\
-            --add-exports=java.base/jdk.internal.misc=ALL-UNNAMED \
-            --add-exports=java.base/sun.nio.ch=ALL-UNNAMED \
-            --add-exports=java.management/com.sun.jmx.mbeanserver=ALL-UNNAMED \
-            --add-exports=jdk.internal.jvmstat/sun.jvmstat.monitor=ALL-UNNAMED \
-            --add-exports=java.base/sun.reflect.generics.reflectiveObjects=ALL-UNNAMED \
-            --add-opens=java.base/jdk.internal.access=ALL-UNNAMED \
-            --add-opens=jdk.management/com.sun.management.internal=ALL-UNNAMED \
-            --add-opens=java.base/java.nio=ALL-UNNAMED \
-            --illegal-access=permit \
-            ${current_value}"
-
-  elif [ "${version}" -ge 15 ] ; then
+  if [ "${version}" -ge 15 ] ; then
       value="\
           --add-opens=java.base/jdk.internal.access=ALL-UNNAMED \
           --add-opens=java.base/jdk.internal.misc=ALL-UNNAMED \
